--- a/index.html
+++ b/index.html
@@ -1,17 +1,85 @@
-<html>
-<head>
-  <title>find a divvy</title>
-  <link rel="stylesheet" type="text/css" href="./style.css" />
-  <script src="./script.js"></script>
-  <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBxNwdrgL2UKDXwA_APUQ4UmX1OjBzvaA4&callback=initMap'></script>
-</head>
-<body>
-  <div id="container">
-    <div id="header">
-      <h1><div id="currentAO"></div><div id="headerText">div.ME: <input type="text" placeholder="Address" id="address"></input><button id="submit">submit</button></div></h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="Find available Divvy Bikes!">
+    <meta name="author" content="thmsdnnr">
+    <link rel="icon" href="./img/favicon.ico">
+
+    <title>divvy-near-me</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="./vendor/bootstrap.min.css" rel="stylesheet">
+
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <link href="./vendor/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="./vendor/starter-template.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./css/style.css" />
+    <script src="./js/script.js"></script>
+    <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBxNwdrgL2UKDXwA_APUQ4UmX1OjBzvaA4&callback=initMap'></script>
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">divvy me</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">home</a></li>
+            <li><a href="https://thmsdnnr.github.io/about">me</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
+    <div class="container-fluid">
+      <div class="starter-template">
+        <div class="row justify-content-center" id="message">stuff</div>
+        <div class="row justify-content-center">
+          <div id="bigCont">
+            <div class="col-sm-8">
+              <div id="map"></div>
+              <div id="currentAO"></div>
+            </div>
+            <div id="dirPanelContainer"><div id="directionsPanel"></div></div>
+          </div>
+        </div>
+          <div id="locSearch">
+            <form id="addressSearch">
+              <div class="input-group">
+                <input type="text" id="address" class="form-control" placeholder="Search near location...">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" id="submit" type="button">go!</button>
+                </span>
+              </div><!-- /input-group -->
+            </form>
+          </div><!-- /.row -->
+        </div><!-- /.container -->
     </div>
-    <div id="map"></div>
-    <div id="directionsPanel"></div>
-  </div>
-</body>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="./vendor/jquery.min.js"><\/script>')</script>
+    <script src="./vendor/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="./vendor/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
