--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Find available Divvy Bikes!">
     <meta name="author" content="thmsdnnr">
-    <link rel="icon" href="./img/favicon.ico">
 
     <title>divvy-near-me</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="./vendor/bootstrap.min.css" rel="stylesheet">
+    <link href="/vendor/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="./vendor/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="/vendor/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./vendor/starter-template.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./css/style.css" />
-    <script src="./js/script.js"></script>
+    <link href="/vendor/starter-template.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <script src="/js/script.js"></script>
     <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBxNwdrgL2UKDXwA_APUQ4UmX1OjBzvaA4&callback=initMap'></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -55,8 +54,16 @@
         <div class="row justify-content-center">
           <div id="bigCont">
             <div class="col-sm-8">
-              <div id="map"></div>
-              <div id="currentAO"></div>
+              <div id="map">
+                <div class="lds-css ng-scope" id="loader">
+                  <div style="width:200px;height:200px" class="lds-dual-ring">
+                    <div></div>
+                    <div></div>
+                </div>
+                loader by <a href="https://loading.io/spinner/double-ring">loading.io</a>
+              </div>
+            </div>
+            <div id="currentAO"></div>
             </div>
             <div id="dirPanelContainer"><div id="directionsPanel"></div></div>
           </div>
@@ -77,9 +84,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="./vendor/jquery.min.js"><\/script>')</script>
-    <script src="./vendor/bootstrap.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/vendor/jquery.min.js"><\/script>')</script>
+    <script src="/vendor/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="./vendor/ie10-viewport-bug-workaround.js"></script>
+    <script src="/vendor/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
