relative links again

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <title>divvy-near-me</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/vendor/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="/vendor/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="vendor/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/vendor/starter-template.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
-    <script src="/js/script.js"></script>
+    <link href="vendor/starter-template.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script src="js/script.js"></script>
     <script async defer src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBxNwdrgL2UKDXwA_APUQ4UmX1OjBzvaA4&callback=initMap'></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -84,9 +84,9 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/vendor/jquery.min.js"><\/script>')</script>
-    <script src="/vendor/bootstrap.min.js"></script>
+    <script>window.jQuery || document.write('<script src="vendor/jquery.min.js"><\/script>')</script>
+    <script src="vendor/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/vendor/ie10-viewport-bug-workaround.js"></script>
+    <script src="vendor/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
